         and mask as the 128k Pentagon (thanks, Q-Master) (Fred).
20071124 disk/{plusd.c,beta.c}: add support for +D snapshots and mark beta as
         active when saving Pentagon and Scorpion snapshots (patch #1782512)
         (Fred).
20071126 ui/gtk/pokefinder.c: display an error message if the search value is
	 invalid (Stuart).
20071126 machines/pentagon1024.c: fix Betadisk (fixes bug #1838612) (Q-Master).
20071126 machines/pentagon1024.c: remove duplicate functions (thanks, Q-Master)
         (bug #1838612) (Fred).
20071126 machines/{Makefile.am,machines.h,pentagon.[ch],pentagon1024.c,
	 pentagon512.c,scorpion.c}: share peripherals array for Pentagon 128
	 and Pentagon 512, and move Pentagon-specific declarations into
	 pentagon.h (Stuart).
20071126 machines/scorpion.c: remove duplicate function (Stuart).
20071126 machines/{pentagon.[ch],pentagon1024.c,scorpion.c}: fix Pentagon and
	 Scorpion unattached port and port 0xff handling (thanks, Q-Master)
	 (Stuart).
20071127 ui/gtk/binary.c: validate the length and start fields, and allow a
	 length of 65536 to be used (fixes bug #1715764) (Stuart).
20071128 ChangeLog: update.
20071128 ChangeLog: tidy up (Stuart).
20071128 profile.c: close the file after writing, and open it in text mode
	 (Stuart).
20071202 man/fuse.1: cleanups (Stuart).
20071203 ay.c,disk/{beta.c,plusd.c,wd_fdc.c},divide.c,if1.c,if2.c,joystick.c,
         memory.c,module.[ch],printer.c,profile.c,scld.c,simpleide.c,slt.c,
         snapshot.c,ula.c,z80/z80.c,zxatasp.c,zxcf.c: separate enabling of
         hardware in snapshots from the main snapshot load code so that
         peripherals are enabled when the machine and module reset functions
         are called - fixes loading snapshots with the +D paged in (thanks,
         Jonathan Needle for test +D szx snapshots) (Fred).
20071203 ay.c: add #include <string.h> for memset prototype (Fred).
20071203 sound/alsasound.c: increase NUM_FRAMES to avoid buffer underruns
	 (Stuart).